유틸 테스트 추가 및 encodeToFileString 개선
encodeToFileString 함수 내부에서 fs.readFileSync를 사용하고 있는 상태.
이것보다 readFile을 사용하면서 사용자에게 동기 또는 비동기 처리를
위임하는게 더 좋다고 판단되어 개선.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CODEF easyCodef-node",
   "main": "index.js",
   "scripts": {
-    "test": "CODEF easyCodef-node"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "crypto": "^1.0.1",
     "hashmap": "^2.4.0",
     "https": "^1.0.0",
+    "mocha": "^8.1.1",
     "request": "^2.88.2",
     "url-parse": "^1.4.7",
     "urlencode": "^1.1.0"
