easycodef, connector 전체 적으로 개선
- 리팩토링 진행
- 리팩토링 진행하면서 테스트 코드 추가
- accesstoken, properties 인스턴스 easycodef 인스턴스 내부에서 생성하여
  멤버 변수로 관리. 이렇게 해야 여러개 인스턴스 사용시 안전함.
- easycodef 메소드에서 비동기 함수를 호출하는 메소드는 async 키워드 부여
- 요청 반환 값 스트링 타입으로 통일 (에러 정보의 경우 객체로 반환되는
    케이스가 존재했음)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CODEF easyCodef-node",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 10000"
   },
   "repository": {
     "type": "git",
