타입스크립트 도입
타입스크립트 사용자에게도 라이브러리를 제공하기 위해서 전환.
.d.ts 파일을 생성하기보다 유지보수에도 용이하다고 판단되어 토입.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "easycodef-node",
   "version": "1.0.0",
   "description": "CODEF easyCodef-node",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "mocha --timeout 10000"
+    "test": "mocha --timeout 10000 test/**/*.ts -r ts-node/register",
+    "build": "tsc",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test"
   },
   "repository": {
     "type": "git",
@@ -32,6 +39,10 @@
     "urlencode": "^1.1.0"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "@types/mocha": "^8.0.3",
+    "@types/request": "^2.48.5",
+    "prettier": "2.0.5",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
