커밋 전 스크립트 실행 추가
husky를 사용하여 커밋 전 테스트 실행과 전체 코드 클린업할 수 있도록
스크립트 추가.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   ],
   "scripts": {
     "test": "mocha --timeout 10000 test/**/*.ts -r ts-node/register",
+    "cleanup": "prettier --config ./prettier.config.js --write ./**/*.ts",
     "build": "tsc",
     "prepare": "npm run build",
     "prepublishOnly": "npm test"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test && npm run cleanup"
+    }
   },
   "repository": {
     "type": "git",
@@ -41,6 +47,7 @@
   "devDependencies": {
     "@types/mocha": "^8.0.3",
     "@types/request": "^2.48.5",
+    "husky": "^4.2.5",
     "prettier": "2.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
