--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "urlencode": "^1.1.0"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/mocha": "^8.0.3",
     "@types/request": "^2.48.5",
     "husky": "^4.2.5",
